2009-12-11  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for stereo rendering.

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h:
	Add members for controlling stereo rendering:

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Add new function rnr_stereo().
	Slightly modify rnr_standard() so that fake-overlay gets
	rendered within it.
	Add members for frustum limits needed for setting of left/right
	camera/perspective parameters and set them up in SetProjection().

	* GledView/GledGUI.cxx:
	Add command-line option -stereo - this makes stereo GL visuals the
	default.

2009-12-10  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/Camera.cxx:
	* Glasses/Camera.h:
	Add member ZTrans mHomeTrans.
	Add functions Identity(), SetHomeTrans(), ResetHomeTrans().
	This allows to set home position of the camera.

2009-12-10  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix problem with resizing of Pupils.

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	After receiving a PRQN_redraw ray manually call draw(). This
	prevents a lock-up in tringula demo when the window is made
	smaller with the window-manager controls.
	This is uber weird.

	Change inheritance order -- make Fl_Gl_Window the primary base.

2009-11-29  Matevz Tadel  <matevz.tadel@ijs.si>

	Stop detached threads during Saturn shutdown.

	* Ephra/Saturn.cxx:
	* Ephra/Saturn.h:
	Add protected method stop_detached_threads().
	Call it during Saturn shut-down.

2009-11-28  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/ZGlass.cxx:
	* Glasses/ZGlass.h:
	Add MC_IsDetached bit to MirComponents_e and handle it in
	assert_MIR_presence().

	* Glasses/PupilInfo.cxx:
	Rewrite ToPupilFrame(ZNode*) to use a set of top-level nodes and
	check it when going up following the parent links.

	* Pupils/Pupil.cxx:
	Do not hold the PupilInfo read-lock throughout SetAbsRelCamera().
	Beautify it.

	Remove double RQN_link_change check in AbsorbRay().
	Beautify it.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h: